[package]
name = "anapaya-edge-tun"
version = "0.6.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Tunnel packets through a QUIC/SCION connection"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking", "tunnel", "QUIC"]

[dependencies]
ana-gotatun = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chacha20 = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
ipnet = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-quic = { workspace = true }
scion-connect-rpc = { workspace = true }
scion-sdk-utils = { workspace = true }
sciparse = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
ntest = { workspace = true }
rcgen = { workspace = true }
squiche = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }


[lints]
workspace = true
