[package]
name = "dhsd"
version = "0.6.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Deterministic hierarchical secret derivation from a master secret."
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
ring = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
