[package]
name = "scion-connect-rpc"
version = "0.5.2"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Connect RPC client library over QUIC/HTTP3 via SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["HTTP3", "QUIC", "RPC"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
prost = { workspace = true }
scion-quic = { workspace = true }
sciparse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ntest = { workspace = true }
rcgen = { workspace = true }
squiche = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio-util = { workspace = true }

[lints]
workspace = true
