[package]
name = "endhost-api-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sciparse]
path = ".."

# Use independent workspace for fuzzers
[workspace]
members = ["."]

[[bin]]
name = "packet_parsing"
path = "fuzz_targets/packet_parsing.rs"
test = false
doc = false
bench = false
